[package]
name = "echoserver"
description = "Echo Server"
version = "0.0.1"
authors = ["lodrem <jialun.cai@pm.me>"]
license = "MIT"
repository = "https://github.com/lodrem/echoserver"
documentation = "https://docs.rs/echoserver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.24", features = ["rt-multi-thread", "signal", "macros", "net"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
