[package]
name = "echoserver"
description = "Echo Server"
version = "0.1.0"
authors = ["zarvd <jialun.cai@pm.me>"]
license = "MIT"
repository = "https://github.com/zarvd/echoserver"
documentation = "https://docs.rs/echoserver"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors", "timeout"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "macros", "net", "io-util"] }
axum = { version = "0.7" }
